# modelipy

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
example/: 0_empty_model.py  1_linear_ode.py  2_nonlinear_ode.py  3_lotka_volterra.py  4_lorenz_attractor.py  5_simple_circuit.py  6_hot_rod.py  7_2d.py  8_electrical_grid.py  9_gas_grid.py  README.md
modelipy/: .output.py.swp  __init__.py  component.py  condition.py  misc.py  model.py  output.py  units.py  util.py
test/: test_component.py  test_condition.py  test_imports.py  test_model.py  test_pprint.py
